# fastapi_course

./: .editorconfig  README.md  pyproject.toml
src/: main.py
src/data/: package.py  release.py
src/services/: package_service.py
src/templates/: index.html
src/templates/home/: about.html  index.html
src/templates/shared/: _layout.html
src/viewmodels/account/: account_viewmodel.py  login_viewmodel.py  register_viewmodel.py
src/viewmodels/home/: index_viewmodel.py  indexviewmodel.py
src/viewmodels/shared/: viewmodel.py
src/views/: account.py  home.py  packages.py
