[tool.poetry]
name = "fastapi_course"
version = "0.1.0"
description = "FastAPI course from Talk Python Training."
authors = ["Victor Klimov <4klimov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
